# stan-base

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
doc/: Battery Design.xlsx  Cam Control Design.xlsx  InterconnexionDiagram.odg  Motor Control Design.xlsx  Potentiometer Mapping.xlsx  StanPixelized.pixil
doc/ArduinoNano/NanoV3.3/: sym-lib-table
doc/ArduinoNano/NanoV3.3/NanoV3.3.pretty/: LINEAR_SOT223.kicad_mod  VQFN32.kicad_mod
doc/Fritzing/: StanBase.fzz  StanBaseBB.fzz  StanBaseBBPico.fzz  StanBaseProto.fzz
include/: hal.h
lib/bat/: bat.c  bat.cpp  bat.h
lib/bno055/: bno055.c  bno055.h
lib/cam/: cam.c  cam.cpp  cam.h  cam_old.cpp
lib/cam2/: cam.c  cam.h
lib/ctl/: ctl.c  ctl.cpp  ctl.h
lib/lcd/: lcd.c  lcd.h
lib/mtr/: mtr.c  mtr.h
lib/nav/: nav.c  nav.cpp  nav.h
lib/uip/: uip.c  uip.h
lib/unity/: unity_config.h
lib/uti/: horner.c  horner.h  pid.c  pid.h  uti.c  uti.h
pcb/Fritzing/: StanBase.fzz
pcb/StanBase/: StanBase-cache.lib  StanBase.sch  StanBase.sch-bak  sym-lib-table
pcb/StanBase/lib/: A000005.lib  MODULE_A000005.kicad_mod
pcb/StanBase/lib/AMC1100DUBR/: 2021-05-23_12-37-06.lib
pcb/StanBase/lib/AMC1100DUBR/footprints.pretty/: AMC1100DUBR.kicad_mod
pcb/StanBase/lib/AMC1200BDUB/: 2021-05-23_12-28-27.lib
pcb/StanBase/lib/AMC1200BDUB/footprints.pretty/: AMC1200BDUB.kicad_mod
pcb/StanBase/lib/MAX14934/: 2021-05-23_10-52-06.lib
pcb/StanBase/lib/MAX14934/footprints.pretty/: MAX14934AAWE&plus_.kicad_mod
pcb/StanBase/lib/R-78E5.0-1.0/: CONV_R-78E5.0-1.0.kicad_mod  R-78E5.0-1.0.lib
ref/: INIU MegaPower 10000 Ultra Slim Specs.txt  TowerPro MG90S Servos Specs.txt
ref/ArduinoNano/NanoV3.3/: NanoV3.3-eagle-import.lib  NanoV3.3.pro
ref/ArduinoNano/NanoV3.3/NanoV3.3.pretty/: 0603-1608X90N.kicad_mod  2X03.kicad_mod  C0603-ROUND.kicad_mod  CAY16.kicad_mod  CHIPLED_0805.kicad_mod  DO220AAL.kicad_mod  HEAD15-NOSS.kicad_mod  RESONATOR.kicad_mod  SMD_157SW.kicad_mod  SSOP28.kicad_mod  TAN-A.kicad_mod  TP-1.00MM.kicad_mod  USB-MINI-B_2.kicad_mod
scripts/: program.sh
src/: blink.c  main.c  main.cpp
test/test_bat/: CMakeLists.txt  test_bat.c
test/test_bno055/: CMakeLists.txt  test_bno055.c
test/test_cam/: CMakeLists.txt  test_cam.c  test_cam.cpp
test/test_cpu/: test_cpu.cpp
test/test_ctl/: CMakeLists.txt  test_ctl.c  test_ctl.cpp
test/test_lcd/: CMakeLists.txt  test_lcd.c
test/test_motor/: test_motor.cpp
test/test_mtr/: CMakeLists.txt  test_mtr.c
test/test_mtr_pot/: CMakeLists.txt  test_mtr_pot.c
test/test_serial/: test_serial.cpp
test/test_uip/: CMakeLists.txt  test_uip.c
